<resources>
    <string name="app_name">Lee\'s Tank</string>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="action_wifi">Wifi</string>
    <string name="empty">Nothing defined</string>
    <string name="action_ip">I.P.</string>
    <string name="action_ssh">SSH</string>
    <string name="action_vnc">VNC</string>
    <string name="action_stats">Stats</string>
    <string name="action_power">Power</string>
    <string name="status_start">Searching for Lee\'s Tank</string>
    <string name="status_found">Tank Located! Connecting</string>
    <string name="status_disconnected">Disconnected from Tank!</string>
    <string name="status_cancel_search">Search cancelled</string>
    <string name="status_connected">Connected to Tank</string>
    <string name="status_subscribed">Subscribed to Tank</string>
    <string name="copy_toast">\'%s\' copied to clipboard</string>
    <string name="title_wifi_list">Detected Wifi:</string>
    <string name="menu_power_title">Power Options</string>
    <string name="menu_power_restart">Restart</string>
    <string name="menu_power_poweroff">Power off</string>
    <string name="password">Password</string>
    <string name="wifi_secured">WPA/WPA2</string>
    <string name="wifi_insecure">No password</string>
    <string name="dialog_wifi_title">Wifi Information: %s</string>
    <string name="forget">Forget</string>
    <string name="error_password_empty">Cannot be empty</string>
    <string name="error_password_too_short">Too short (Min 8 characters)</string>
    <string name="error_password_too_long">Too long (Max 63 characters)</string>
    <string name="success">Success!</string>
    <string name="error_wifi_exists">Already connected</string>
    <string name="error_wifi_no_connection">No such connection</string>
    <string name="menu_ssh_title">SSH Options</string>
    <string name="menu_vnc_title">VNC Options</string>
    <string name="menu_ssh_enable">Enable SSH</string>
    <string name="menu_ssh_disable">Disable SSH</string>
    <string name="menu_ssh_open_app">Open App</string>
    <string name="menu_vnc_enable">Enable VNC</string>
    <string name="menu_vnc_disable">Disable VNC</string>
    <string name="menu_vnc_open_app">Open App</string>
    <string name="error_ssh_fail">SSH could not be started. Please try again</string>
    <string name="success_ssh_message">SSH enabled on: %s</string>
    <string name="connect">Connect</string>
    <string name="success_vnc_message">VNC enabled on: %s</string>
    <string name="success_vnc_stopped_message">VNC disabled</string>
    <string name="success_ssh_stopped_message">SSH diabled</string>
    <string name="menu_stats_title">Statistics</string>
    <string name="menu_stats_temperature">CPU Temperature</string>
    <string name="menu_stats_system_info">System Information</string>
    <string name="dialog_version_title">System Information</string>
    <string name="dialog_temperature_title">CPU Temperature</string>
    <string name="dialog_temperature_description">The recommended temperature is between 0°C and 70°C</string>
    <string name="dialog_temperature_unit">ºc</string>
    <string name="dialog_cpu_info_description">This is some basic information on your Blueberry Pi</string>
    <string name="ssh_chooser_title">Choose SSH client</string>
    <string name="error_no_ssh_client">No SSH client found</string>
    <string name="error_no_vnc_client">No VNC client found</string>
    <string name="open_app_store">App store</string>
    <string name="vnc_chooser_title">VNC Client</string>
    <string name="text_help">This app is to be used in conjunction with a specific disk image of Raspberry Pi. This is to allow the app to access the Pi via Bluetooth Low Energy (BLE).</string>
    <string name="help_wifi">The Raspberry Pi will look for available Wifi networks and allow you to log into them</string>
    <string name="help_ip">Allows you to see and copy the IP address so that you can access the Raspberry Pi from other computers</string>
    <string name="help_ssh">Using an SSH client, you can access your Raspberry Pi\'s command line, also known as terminal</string>
    <string name="help_vnc">You can access the Raspberry Pi using a remote desktop connection known as VNC</string>
    <string name="help_stats">Get some general statistics of the Raspberry Pi</string>
    <string name="help_power">Reboot or turn off the Raspberry Pi</string>
    <string name="dialog_ip_title">Raspberry Pi IP Address</string>
    <string name="dialog_ssh_user_title">SSH Username</string>
    <string name="dialog_ssh_password_hint">Username</string>
    <string name="dialog_ssh_password_default">pi</string>
    <string name="gps_network_not_enabled">Location not enabled</string>
    <string name="open_location_settings">In order for Bluetooth LE to work, Android requires location services be enabled.</string>
    <string name="dialog_ip_none_title">No I.P. Address Found</string>
    <string name="dialog_ip_none_message">Try connecting to a Wifi first</string>
</resources>
